--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -13,7 +13,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
-        <title>Happy Birthday</title>
+        <title>Happy Birthday Yến Linh</title>
         <link rel="stylesheet" href="./style.css">
         <script>
             window.open = function () {};
@@ -63,9 +63,9 @@
                 </div>
                 <div class="avatar">
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
-                    <img src="./MyAvatar.jpg" alt="" class="avatar__img" onclick="showMessage()" />
+                    <img src="./yenlinh.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Ngọc Tiến</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Yến Linh</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
@@ -82,7 +82,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text: "Gửi đến tôi, chàng trai năm 20 tuổi, hãy biết cố gắng thật nhiều để sau này không hối hận, hãy biết yêu thương bản thân để luôn có sức khỏe khỏe mạnh, hãy biết hiếu thuận gia đình để bố mẹ không bao giờ buồn, và cũng hãy đi tìm nàng công chúa của mình đi nào.", // Nội dung lời nhắn
+                    text:"chúc mừng sinh nhật", // Nội dung lời nhắn
                     button: {
                         text: "❤️️",
                     },
