--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -69,9 +69,9 @@
                 </div>
                 
                 <!-- 5. Phần nhạc -->
-                <!-- <audio id="player" autoplay loop>
+                <audio id="player" autoplay loop>
                     <source src="./music.mp3" type="audio/mp3">
-                </audio> -->
+                </audio>
             </div>
         </div>
         <script>
