--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -65,7 +65,7 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./yenlinh.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Yến Linh</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Bấm zô hình</h1>
                 </div>
                 
                <!-- 5. Phần nhạc -->
