Sửa phần nhạc thành click mới phát

--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -63,9 +63,9 @@
                 </div>
                 <div class="avatar">
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
-                    <img src="./abcd.jpg" alt="" class="avatar__img" onclick="showMessage()" />
+                    <img src="./yenlinh.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Liu liu đồ chẻ châuuuu</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Bấm zô hình</h1>
                 </div>
                 
                <!-- 5. Phần nhạc -->
