--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -13,7 +13,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
-        <title>Happy Birthday Yến Linh</title>
+        <title>Happy Birthday Bướng The Kẹo Sao =))))</title>
         <link rel="stylesheet" href="./style.css">
         <script>
             window.open = function () {};
@@ -63,7 +63,7 @@
                 </div>
                 <div class="avatar">
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
-                    <img src="./yenlinh.jpg" alt="" class="avatar__img" onclick="showMessage()" />
+                    <img src="buongthe.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
                     <h1 onclick="showMessage()" class="avatar__title">Bấm zô hình</h1>
                 </div>
@@ -90,7 +90,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text:"Nghe đồn hôm nay ai đó lớn thêm một tuổi. Chúc cô Ngưu nhỏ tuổi mới nhẹ lòng hơn, vui nhiều hơn, và gặp được ai đó biết cách làm em cười mỗi ngày :)) ", // Nội dung lời nhắn
+                    text:"Tao văn mấy cái này dở lắm, thông cảm nhé. Chúc mày tuổi mới luôn vui vẻ và tất cả những điều tốt đẹp nhất sẽ tới. Mày ít chia sẻ và deep talk với tao quá, đa số là cà rỡn và cười thật to nên tao cũng đếch biết ghi cái khỉ khô gì. Nhưng mà có một điều tao muốn là chị em mình sẽ thân hơn, hẹ hẹ hẹ ", // Nội dung lời nhắn
                     button: {
                         text: "❤️️",
                     },
