--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -90,7 +90,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text:"Tao văn mấy cái này dở lắm, thông cảm nhé. Chúc mày tuổi mới luôn vui vẻ và tất cả những điều tốt đẹp nhất sẽ tới. Mày ít chia sẻ và deep talk với tao quá, đa số là cà rỡn và cười thật to nên tao cũng đếch biết ghi cái khỉ khô gì. Nhưng mà có một điều tao muốn là chị em mình sẽ thân hơn, hẹ hẹ hẹ ", // Nội dung lời nhắn
+                    text:"Tao văn mấy cái này dở lắm, thông cảm nhé. Chúc mày tuổi mới luôn vui vẻ và tất cả những điều tốt đẹp nhất sẽ tới. Mày ít chia sẻ và deep talk với tao quá, đa số là cà rỡn và cười thật to nên tao cũng đếch biết ghi cái khỉ khô gì. Nhưng mà có một điều tao muốn là chị em mình sẽ thân hơn, hẹ hẹ hẹ. Thế thôi nhá, ghi thêm nữa dễ sến lắm :)))) ", // Nội dung lời nhắn
                     button: {
                         text: "❤️️",
                     },
