--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -13,7 +13,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
-        <title>Happy Birthday Bướng The Kẹo Sao =))))</title>
+        <title>Happy Birthday </title>
         <link rel="stylesheet" href="./style.css">
         <script>
             window.open = function () {};
@@ -90,7 +90,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text:"Tao văn mấy cái này dở lắm, thông cảm nhé. Chúc mày tuổi mới luôn vui vẻ và tất cả những điều tốt đẹp nhất sẽ tới. Mày ít chia sẻ và deep talk với tao quá, đa số là cà rỡn và cười thật to nên tao cũng đếch biết ghi cái khỉ khô gì. Nhưng mà có một điều tao muốn là chị em mình sẽ thân hơn, hẹ hẹ hẹ. Thế thôi nhá, ghi thêm nữa dễ sến lắm :)))) ", // Nội dung lời nhắn
+                    text:"Tao văn mấy cái này dở lắm, thông cảm nha. Chúc mày tuổi mới luôn vui vẻ, bình yên và gặp thật nhiều điều tốt đẹp. Mày thì ít chia sẻ hay deep talk với tao, toàn cà rỡn cười haha không à, nên tao cũng đếch biết ghi cái khỉ gì. Nhưng mà thật lòng, tao mong chị em mình sẽ thân hơn, hẹ hẹ hẹ. Thế thôi ha, ghi thêm nữa là dễ bị sến á :))))", // Nội dung lời nhắn
                     button: {
                         text: "❤️️",
                     },
